# physical-ai-humanoid-textbook

./: .gitignore  CHATBOT_SETUP.md  README.md  backend_config.py  docker-compose.yml  docusaurus.config.js  docusaurus.config.js.new  main.py  main.py.with_services  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.backend.txt  requirements.railway.txt  requirements.txt  response.txt  setup.cfg  setup_qdrant.py  sidebars.js
.github/workflows/: ci.yml
docs/: chat.mdx  intro.md  rag-system.md  sample-chat-integration.mdx
docs/resources/: supplementary.md
docs/safety-guidelines/: electrical-safety.md  emergency-procedures.md  general-safety.md  hardware-safety.md
specs/002-rag-question-answering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-textbook-physical-ai/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.py  db.py
src/api/: main.py
src/clientModules/: apiProxy.js  injectFloatingChatbot.js
src/components/: FloatingChatbot.jsx
src/css/: custom.css
src/models/: api_models.py  book_content.py  content_chunk.py  question.py  selected_text.py
src/services/: embedding_service.py  metadata_service.py  rag_service.py  vector_store_service.py
src/utils/: FloatingChatbotReact.jsx  document_processor.py  injectFloatingChatbot.js  logging.py  rate_limiting.py  security.py
tests/contract/: test_ask.py  test_ask_from_selection.py
tests/integration/: test_full_book_qa.py  test_selected_text_qa.py
tests/unit/: test_additional_unit_tests.py  test_json_schema.py  (+2 more)
(+35 files in other folders)
